@@ -1,5 +1,9 @@
 1998-11-07  Tanaka Akira  <akr@jaist.ac.jp>
 
+        * mime-view.el: (mime-display-text/x-vcard): Preserve encoding.
+
+1998-11-07  Tanaka Akira  <akr@jaist.ac.jp>
+
         * mime-view.el: (mime-display-text/x-vcard): New function.
         (mime-preview-condition): Set up for 'mime-preview-text/x-vcard.
 
